xr: new save-from-xxx and fix selection=all